<resources>
    <string name="app_name">Remembrall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rembrall_creation">New job</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="id_card">DNI</string>
    <string name="address">Dirección</string>
    <string name="email">Email</string>
    <string name="home_phone">Tel. casa</string>
    <string name="mobile_phone">Celular</string>
    <string name="client_title_form">Datos del cliente</string>
    <string name="date_title_form">Fechas</string>
    <string name="product_title_form">Equipo</string>
    <string name="equip_number">N equipo</string>
    <string name="sign_title_form">Firma</string>
    <string name="tester_number">Probador</string>
    <string name="terminal_number">Num terminal</string>
    <string name="price">Importe</string>
    <string name="description">Obsevacion</string>
    <string name="save_error_msg">Error al guardar, intentelo de nuevo.</string>
    <string name="redo_desc">Rehacer firma</string>
    <string name="error_empty_text">No puede quedar vacio</string>
    <string name="error_email_pattern">No parece ser un mail</string>
    <string name="client_sign">Firma del cliente</string>
    <string name="add_delivery">Agregar pedido</string>
    <string name="total">Total</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="save_success_msg">Saved</string>
  <string name="deliver_mg_to">Entregar MG a %s</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="ask_deletion_message">Seguro que quiere borrarlo?</string>
  <string name="empty_events_msg">No hay eventos</string>
  <string name="only_can_delete_more_one_delivery_msg">Lista quedaria vacia, no borrar</string>
  <string name="search_user_desc">Buscar usuarios</string>
</resources>
